--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5532e95350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efe03624790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5532b73b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5532b73d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efe03c67a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efe03c82150&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5532dc7410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5532dc7610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efe03ed0450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efe03f35150&gt;]</pre>
 </div>
 
 </div>
