--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f37bffa10d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0256271710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37c0333ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37c0333cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f02563087d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f02563089d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37c05d2910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37c059b650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f025657ddd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f02565492d0&gt;]</pre>
 </div>
 
 </div>
