--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f85d4738890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0a972ec290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f85d4438990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f85d4438bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a96804a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0a96804c10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f85d49f4310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f85d49f4550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a96a6c350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0a96a6c4d0&gt;]</pre>
 </div>
 
 </div>
