--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efd5fa9fb10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2d4aa242d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efd5fb2d890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efd5fb2da90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d4ad3bb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2d4ad3bd90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efd5fd6e250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efd5fd6e450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d4b2e5550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2d4b2e5750&gt;]</pre>
 </div>
 
 </div>
