--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f333cc69310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c52237d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f333be4dd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f333be4df10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c5177d910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c5177db10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f333c3eb650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f333c3eb850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c519bd210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c519bd410&gt;]</pre>
 </div>
 
 </div>
