--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1eade67710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f108790c210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1eacfbd590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ead2f7dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f108809a890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f108809aa90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ead57fa10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ead5476d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f10882db210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f10882db410&gt;]</pre>
 </div>
 
 </div>
