--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd083217450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc493536fd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd082440a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0823e6d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc493554c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc493554e90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd082997550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0829e0cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc4937a55d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc4937a57d0&gt;]</pre>
 </div>
 
 </div>
