--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc493536fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc491397210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc493554c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc493554e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc491418a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc491418c10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc4937a55d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc4937a57d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc4916c5190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc49167e590&gt;]</pre>
 </div>
 
 </div>
