--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb3d81104d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f09c2ad2850&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3d7ea0b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb3d7ea0d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f09c33c2910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f09c33c2b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3d83fa4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb3d83fa6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f09c362e250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f09c362e450&gt;]</pre>
 </div>
 
 </div>
