--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b26ce6490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8997820dd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b26fe0ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b26fe0cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8997533b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8997533d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b27591450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b27591650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8997ade490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8997ade690&gt;]</pre>
 </div>
 
 </div>
