--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe905e271d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe01f830210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe905b2fad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe905b2fcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe01f578b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe01f578d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9060e2450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe9060e2650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe01fb24590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe01fb24790&gt;]</pre>
 </div>
 
 </div>
