--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fda3c9a1d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd472766e10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda3c6d5990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda3c6d5b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4727d0c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4727d0e50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda3c917290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda3c917490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd472a206d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd472a208d0&gt;]</pre>
 </div>
 
 </div>
