--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff0819cddd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc1c448cd10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff081a4ab90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff081a4ad90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1c32cc350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1c38fdc10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff081c9f510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff081c9f710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1c32cc910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1c3b4f590&gt;]</pre>
 </div>
 
 </div>
