--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc1c448cd10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa1c9895d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1c32cc350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc1c38fdc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1c8db09d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa1c8db0bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1c32cc910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc1c3b4f590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1c901a310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa1c901a510&gt;]</pre>
 </div>
 
 </div>
