--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f658c42b2d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd0ad278210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f658c4a6b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f658c4a6d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0ac15cad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd0ac15ccd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f658c6f74d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f658c6f76d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0ac9fb410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd0ac9fb610&gt;]</pre>
 </div>
 
 </div>
