--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd0ad278210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f073d2fd550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0ac15cad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0ac15ccd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f073d024d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f073d024f10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0ac9fb410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0ac9fb610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f073d5f0650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f073d5f0850&gt;]</pre>
 </div>
 
 </div>
