--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9437ff82d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3714ed2410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f94375139d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9437513bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f37152f3a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f37152f3c50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f943777b3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f943777b5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f37158a0310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f37158a0510&gt;]</pre>
 </div>
 
 </div>
