--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3714ed2410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6bd8bdd3d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37152f3a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37152f3c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6bd8906b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6bd8906d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37158a0310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37158a0510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6bd8eaf510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6bd8eaf710&gt;]</pre>
 </div>
 
 </div>
