--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2c6cd7dc50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0d9d8ba790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c6ca8dd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2c6ca8df10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d9d5cec90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d9d5ceed0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c6d037650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2c6d037850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d9d823590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d9d8237d0&gt;]</pre>
 </div>
 
 </div>
