--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7eff102510d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f871e59d5d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7eff0f79e750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7eff0f782dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f871d78fa10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f871d78fc10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7eff0f9c9050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7eff0f9d36d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f871dd1d3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f871dd1d5d0&gt;]</pre>
 </div>
 
 </div>
